--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build-script": "react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "npm run build",
-    "prebuild": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
